--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEATHER APP</title>
     <link rel="stylesheet" href="weather.css">
+    <link rel="shortcut icon" href="snowflake-vector-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />"
     <script src="script.js" defer></script> 
 </head>
@@ -50,7 +51,7 @@
                     </span>
 
                     <div class="condition-info2">
-                        <h5 class="regular-txt">Humidity</h5>
+                        <h5 class="regular-txt" style="padding-left: 0%;">Humidity</h5>
                         <h5 class="Humidity-value-txt">55%</h5>
                     </div>
                 </div> <br>
@@ -61,7 +62,7 @@
                     </span>
                 
                    <div class="condition-info1">
-                      <h5 class="regular-txt">Wind Speed</h5> 
+                      <h5 class="regular-txt" style="padding-left: 0%;">Wind Speed</h5> 
                       <h5 class="wind-value-txt"> 2 M/s</h5> 
                    </div>
                  
